# libcompress

./: CMakeLists.txt  libcompress.cpp  libcompress.pro  library.cpp  library.h
cmake/: libcompressConfig.cmake
include/: libcompress.h  libcompress_global.h
